clusters/main/kubernetes/apps/filebrowser/app/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "filebrowser.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: filebrowser
          port: 10187

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: filebrowser
  oidc:
    provider:
      backendRefs:
        - name: authelia
          port: 9091
          namespace: authelia
      issuer: "https://auth.${DOMAIN_0}"
      authorizationEndpoint: "https://auth.${DOMAIN_0}/api/oidc/authorization"
      tokenEndpoint: "https://auth.${DOMAIN_0}/api/oidc/token"
    clientID: "${FILEBROWSER_OIDC_CLIENT_ID}"
    clientSecret:
      name: "filebrowser-client-secret"
    cookieDomain: "filebrowser.${DOMAIN_0}"
    scopes:
      - "openid"
      - "offline_access"
      - "profile"
    redirectURL: "https://filebrowser.${DOMAIN_0}/envoyoidc/oauth2/callback"
    logoutPath: "/envoyoidc/logout"
