clusters/main/kubernetes/apps/filebrowser/app/httproutes2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
  namespace: filebrowser
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Fileshare
    gethomepage.dev/group: Tools
    #gethomepage.dev/instance: internal
    gethomepage.dev/icon: https://trueforge.org/img/hotlink-ok/chart-icons/filebrowser.webp
    gethomepage.dev/name: Filebrowser
spec:
  parentRefs:
    - name: envoy-external
      namespace: envoy
      sectionName: https
  hostnames:
    - "filebrowser.${INGRESS_URL}"
  rules:
    - backendRefs:
        - name: filebrowser
          port: 10187

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: filebrowser
  extAuth:
    headersToExtAuth:
      - "accept"
      - "cookie"
      - "Cookie"
      - "location"
      - "authorization"
      - "proxy-authorization"
      - "x-forwarded-proto"
    failOpen: false
    http:
      backendRefs:
        - name: "authelia"
          namespace: "authelia"
          port: 9091
      path: "/api/authz/ext-authz/"
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
        - Location
